# CppUnitTestingSandbox

./: CMakeLists.txt
src/: CMakeLists.txt  IMagicNumber.h  IMagicNumberDependencies.h  IUtilMathPassThrough.h  MagicNumber.cpp  MagicNumber.h  MagicNumberDependencies.cpp  MagicNumberDependencies.h  SmartDeleter.h  UtilMath.cpp  UtilMath.h  UtilMathPassThrough.cpp  UtilMathPassThrough.h  main.cpp
test/: CMakeLists.txt  MagicNumberDependenciesTest.cpp  MagicNumberIT.cpp  MagicNumberTests.cpp  MockMagicNumberDependencies.h  MockUtilMathPassThrough.h  stdafx.h
